Made compatible with Windows + SQL Server The order by clauses with the 'CASE sql' for the sprint were removed. Need to supply an alternate, rather than removing them.

--- a/app/views/hooks/_rb_include_scripts.html.erb
+++ b/app/views/hooks/_rb_include_scripts.html.erb
@@ -6,6 +6,9 @@
       javascript_include_tag 'jquery/jquery-1.7.2-ui-1.8.21-ujs-2.0.3.js', :plugin => 'redmine_backlogs'
     end
 %>
+<!-- <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.8.3.js"></script>     
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.22/jquery-ui.js"></script>   
+<link rel="Stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.10/themes/redmond/jquery-ui.css" />   -->
 <%= javascript_include_tag 'jquery/jquery.verticalfix-min.js', :plugin => 'redmine_backlogs' %>
 <!--[if IE]>
 <%= javascript_include_tag 'jquery/jquery.jqplot/excanvas.js', :plugin => 'redmine_backlogs' %>
